--- a/MIT.ipynb
+++ b/MIT.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# The Massachusetts Institute of Technology (MIT)\n",
     "\n",
-    "**Add your full name and GitHub username here**\n",
+    "**Nick Huynh and nickdhuynh**\n",
     "\n",
     "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, Minnesota. Established in 1422, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
     "\n",
@@ -14,6 +14,13 @@
     "\n",
     "![](image.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
